Fixes the link not working with z-index

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -53,6 +53,7 @@
   top: 0;
   left: 0;
   margin: 0 auto;
+  z-index: 1;
 }
 #email-link-wrapper {
   position: absolute;
@@ -134,6 +135,45 @@
   left: 27px;
   bottom: 80px;
   width: 105px;
+}
+.horizontal-glitch {
+  position: absolute;
+  width: 35px;
+  height: 100px;
+}
+.horizontal-glitch:before {
+  content: '';
+  position: absolute;
+  width: 1px;
+  height: 25%;
+  right: 0%;
+  top: 0%;
+  background-color: #fff;
+  opacity: 0.2;
+}
+.horizontal-glitch:after {
+  content: '';
+  position: absolute;
+  width: 1px;
+  height: 50%;
+  right: 0%;
+  top: 50%;
+  background-color: #fff;
+  opacity: 0.2;
+}
+.horizontal-glitch div {
+  content: '';
+  position: absolute;
+  height: 1px;
+  top: 40%;
+  right: 0%;
+  left: 0%;
+  background-color: #fff;
+  opacity: 0.2;
+}
+#story-horizontal-glitch {
+  top: 220px;
+  right: 100px;
 }
 #story {
   position: relative;
