--- a/public/stylus/header.styl
+++ b/public/stylus/header.styl
@@ -9,6 +9,7 @@
   top: 0
   left: 0
   margin: 0 auto
+  z-index: 1
 }
 
 #email-link-wrapper {
